5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1638_2449.log
== TEST (2019-04-11 10:19:07) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)
if (x, y == 0):
	print(x)
	print(y)
else:
	print(Nao tem solucao)
-- ERROR:
File "XXXX", line 13
    print(Nao tem solucao)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:19:18) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)
if (x, y == 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:19:41) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)
if (x, y == 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.138714
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:21:07) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)
if (x, y == 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.143995
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:21:20) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)
if ((x, y) == 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:21:37) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)
if ((x, y) == 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.16455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:23:23) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)
print(x)
print(y)
if ((x, y) == 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:23:38) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)
print(x)
print(y)
if ((x, y) == 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.20273
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:25:59) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
#x = (c * e - b * f) / (a * e - b * d)
#y = (a * f - c * d) / (a * e - b * d)
if ((x, y) == 0):
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b * d)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if ((x, y) == 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:44) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
if (x == 0 / 0 and y == 0 / 0):
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b * d)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (x == 0 / 0 and y == 0 / 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:34:59) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)


if (x == 0 / 0 and y == 0 / 0):
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b * d)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:35:40) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)


if (x == 0 / 0 and y == 0 / 0):
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b * d)
	print(y)
-- EXECUTION TIME:
0.156111
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:44:00) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b* d)
v = (a * e - b * d)
l = (a * e - b* d)
if (v == 0 and l == 0 ):
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b* d)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:44:56) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b* d)
v = (a * e - b * d)
l = (a * e - b* d)
if (v == 0 and l == 0 ):
	print("Nao tem solucao")
else:
		x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b* d)
	print(y)
-- ERROR:
File "XXXX", line 15
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:45:12) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b* d)
v = (a * e - b * d)
l = (a * e - b* d)
if (v == 0 and l == 0 ):
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b* d)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:45:18) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b* d)
v = (a * e - b * d)
l = (a * e - b* d)
if (v == 0 and l == 0 ):
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b* d)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:45:27) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b* d)
v = (a * e - b * d)
l = (a * e - b* d)
if (v == 0 and l == 0 ):
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b* d)
	print(y)
-- EXECUTION TIME:
0.165152
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:46:09) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b* d)
v = (a * e - b * d)
l = (a * e - b* d)
if (v == 0 and l == 0 ):
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b* d)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:46:20) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))
x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b* d)
v = (a * e - b * d)
l = (a * e - b* d)
if (v == 0 and l == 0 ):
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b* d)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c * e - b * f) / (a * e - b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:46:49) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))

v = (a * e - b * d)
l = (a * e - b* d)
if (v == 0 and l == 0 ):
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b* d)
	print(y)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:47:00) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))
e = float(input(""))
f = float(input(""))

v = (a * e - b * d)
l = (a * e - b* d)
if (v == 0 and l == 0 ):
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / (a * e - b * d)
	print(x)
	y = (a * f - c * d) / (a * e - b* d)
	print(y)
-- EXECUTION TIME:
0.19621
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
